@@ -1,5 +1,7 @@
 *SVN*
 
+* Set ActionView::Base.default_form_builder once rather than passing the :builder option to every form or overriding the form helper methods.  [Jeremy Kemper]
+
 * Deprecate expire_matched_fragments. Use expire_fragment instead.  #6535 [Bob Silva]
 
 * Update to latest Prototype, which doesn't serialize disabled form elements, adds clone() to arrays, empty/non-string Element.update() and adds a fixes excessive error reporting in WebKit beta versions [Thomas Fuchs]
